# cc-autoflagger

./: .gitignore  README.md  main.py  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
docs/: APPROACH.md  DESIGN_DECISIONS.md  TECHNICAL.md  THRESHOLD_ANALYSIS.md
src/: app.py  cli.py  config.py  data_loader.py  eda.py  export_static.py  features.py  logger.py  predict.py  stack.py  train.py
src/signals/: category_predictor.py  embedding_features.py  flow_checker.py  heuristics.py  llm_judge.py  llm_postfilter.py  nli_checker.py  number_checker.py  numeric_diff.py  outcome_predictor.py  response_checker.py  text_features.py  transcript_diff.py
src/static/: call.html  index.html  overview.html
tests/: conftest.py  test_data_loader.py  test_edge_cases.py  test_end_to_end.py  test_pipeline.py  test_signals.py
