[project]
name = "carecaller-ticket"
version = "0.1.0"
description = "Call Quality Auto-Flagger — CareCaller Hackathon 2026 Problem 1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # data & ml
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "pyarrow",
    # text / nlp signals
    "jiwer",
    "word2number",
    "transformers",
    "torch",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
pipeline = "src.cli:pipeline"
eda = "src.cli:eda"
extract = "src.cli:extract"
train = "src.cli:train"
predict = "src.cli:predict"
llm-extract = "src.cli:llm_extract"
dashboard = "src.app:main"
export-static = "src.export_static:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
